      a single string. It is still filled if the input consists of multiple
      strings.

    o merge_motifs(): ALLR/ALLR_LL/KL/IS methods no longer add pseudocounts to
      the motifs. Instead, pseudocounts are added to temporary internal copies
      which are used for comparison and alignment. The original un-modified
      matrices are then combined.

    o Some cleanup to documentation and vignettes.

    o General code cleanup.

BUG FIXES

    o write_meme() now includes altname slot if filled. Contribution from
      Spencer Nystrom (https://github.com/bjmt/universalmotif/pull/5).

    o write_meme() checks for and removes any spaces/equal signs in motif
      names/altnames.

    o view_motifs(..., use.type = "ICM"): check for zero IC motifs, as these
      cannot be plotted by ggseqlogo.

CHANGES IN VERSION 1.4.10
-------------------------

BUG FIXES

    o Updated the warning from v1.4.9 to make users aware that the daylight
      layout will be permanently disabled for Bioconductor 3.10.

CHANGES IN VERSION 1.4.9
------------------------

BUG FIXES

  o Temporarily disabling the 'daylight' layout for motif_tree() to get
    around a new bug.

CHANGES IN VERSION 1.4.8
------------------------

BUG FIXES

    o Fixed buffer overflow error in motif_peaks().

CHANGES IN VERSION 1.4.7
------------------------

BUG FIXES

    o Fixed dangling references in compare_motifs_helper.cpp and
      utils-exported.cpp.

    o Trying to subset a motif to a single column no longer throws an error.

CHANGES IN VERSION 1.4.6
------------------------

BUG FIXES

    o scan_sequences(): will now actually emit a warning when non-standard
      letters are detected.

CHANGES IN VERSION 1.4.5
------------------------

BUG FIXES

    o run_meme(): don't try and delete R's tempdir.

CHANGES IN VERSION 1.4.4
------------------------

BUG FIXES

    o Minor fix to how args are fed to processx::run() in run_meme().

CHANGES IN VERSION 1.4.3
------------------------

BUG FIXES
