@@ -25,6 +25,10 @@
 #' use the [log_string_pval()] function to get the log of the string-formatted
 #' p-value.
 #'
+#' Furthermore, note that DNA-LIKE, RNA-LIKE, and AA-LIKE alphabets will be treated
+#' as DNA, RNA, and AA alphabets respectively. Custom alphabets are currently
+#' not supported.
+#'
 #' @examples
 #' meme.minimal <- read_meme(system.file("extdata", "meme_minimal.txt",
 #'                                       package = "universalmotif"))
