@@ -36,6 +36,10 @@ automatically to 0. To get around this, the E-value is also stored as a
 string in the \code{extrainfo} slot. If you require a numeric value for analysis,
 use the \code{\link[=log_string_pval]{log_string_pval()}} function to get the log of the string-formatted
 p-value.
+
+Furthermore, note that DNA-LIKE, RNA-LIKE, and AA-LIKE alphabets will be treated
+as DNA, RNA, and AA alphabets respectively. Custom alphabets are currently
+not supported.
 }
 \examples{
 meme.minimal <- read_meme(system.file("extdata", "meme_minimal.txt",
